--- a/index.html
+++ b/index.html
@@ -133,7 +133,12 @@ $(document).ready(function(){
     background-repeat: no-repeat;
     background-size: cover;
 }
-
+	
+.container > div > img {  
+    width: 100%;  
+    height: 100%;  
+    object-fit: cover;  
+}
 
  .but { 
   max-width: 500px;
