--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ $(document).ready(function(){
           <h3>
 RIFA DO <br><h3> <i style="font-size:24px" class="fa">&#xf004;</i> Kaleb Chadelovski <i style="font-size:24px" class="fa">&#xf004;</i></h3>
  <br>
-<h5>Podemos dar à volta no mundo inteiro, mas nossa verdadeira aventura começa quando o nosso bebê nasce.<br></h5>
+<h5>Podemos dar à volta no mundo inteiro 20024, mas nossa verdadeira aventura começa quando o nosso bebê nasce.<br></h5>
 <h5>Já que nesse momento a mamãe e o papai não poderão reunir todos os nossos amigos para celebrar o meu nascimento, eles resolveram inovar, fazendo um chá de fraldas online (rifa). <br></h5>
 
 
