--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ RIFA DO <br><h3> <i style="font-size:24px" class="fa">&#xf004;</i> Kaleb Chadelo
 				<br>
 				      <br />
 <h5>Você pode enviar para a nossa casa ou combinar com o papai ou com a mamãe para ir buscar.<h5/>
-<h5>Nosso Endereço: ---------------------------------------------------<h5/>
+<h5>Nosso Endereço: -Videira 576-----------------------------<h5/>
 <h5>CEP:----------------/SP<h5/>
 <br> 
 				 <br>
